Se actualizaron templates y se implementó SSO. Se comenzó con el manejo de las aplicaciones clientes consumiendo el servicio de gestión de aplicaciones

--- a/src/main/webapp/WEB-INF/facelets/templates/indexTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/templates/indexTemplate.xhtml
@@ -6,7 +6,11 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet"></link>
+        <style type="text/css">
+            .ui-widget {
+                font-size: 90%;
+            }
+        </style>
         <link href="resources/css/estilos.css" type="text/css" rel="stylesheet" />
         <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/img/favicon.ico"/>
         <f:facet name="first">
@@ -18,7 +22,7 @@
         <p:layout fullPage="true">
             <p:layoutUnit id="top" styleClass="top" position="north" >
                 <h:panelGrid id="topPg" columns="3" styleClass="topPg" >
-                    <img src="resources/img/sayds_beige.gif" />
+                    <img src="resources/img/logoCoord80x270.jpg" />
                     <p:outputLabel id="topOl" value="#{bundle.Aplicacion}" styleClass="topOl" style="font-size: xx-large" />
                 </h:panelGrid>
             </p:layoutUnit>
@@ -49,7 +53,8 @@
                         </p:submenu> 
                         
                         <f:facet name="options">
-                            <p:outputLabel value="Usuario: #{request.remoteUser}" style="margin-right:10px" />
+                            <p:outputLabel value="Usuario: #{mbLogin.usLogeado.nombreCompleto}" style="margin-right:10px" />
+                            <p:commandButton value="App" icon="ui-icon-home" actionListener="#{mbLogin.logout}" oncomplete="home(xhr, status, args)" style="margin-right:10px" />
                             <p:commandButton value="Cerrar sesión" icon="ui-icon-extlink" actionListener="#{mbLogin.logout}" oncomplete="logout(xhr, status, args)" />
                         </f:facet>   
                     </p:menubar>
@@ -58,15 +63,8 @@
             </p:layoutUnit>
             
             <p:layoutUnit id="botton" styleClass="botton" position="south" >
-                    <p:panel style="background-color: #424242; text-align: center; border: none; height: 100%; border-color: #424242" >
-                        <h:panelGrid id="bottonPg" columns="1" styleClass="bottonPg">
-                            <h:outputLabel styleClass="bottonOl" value="#{bundle.Pie_1}" style="font-size: small"/>
-                            <h:outputLabel styleClass="bottonOl" value="#{bundle.Pie_2}" style="font-size: small"/>
-                            <h:outputLabel styleClass="bottonOl" value="#{bundle.Pie_3}" style="font-size: small"/>
-                            <h:outputLabel styleClass="bottonOl" value="#{bundle.Pie_4}" style="font-size: small"/>
-                        </h:panelGrid>
-                    </p:panel>
-                </p:layoutUnit>
+                <img src="resources/img/BloquePie.jpg" />
+            </p:layoutUnit>
         </p:layout>
     </h:body>
     
@@ -74,9 +72,15 @@
         //<![CDATA[
         function logout(xhr, status, args){
             setTimeout(function(){
-                window.location = 'https://localhost:8181/cas/logout';
+                window.location = '/gestionAplicaciones/faces/logout.xhtml';
             }, 500);
         }
+        
+        function home(xhr, status, args){
+            setTimeout(function(){
+                window.location = '/gestionAplicaciones';
+            }, 500);
+        }           
         //]]>
     </script>      
     
