--- a/src/main/webapp/resources/css/estilos.css
+++ b/src/main/webapp/resources/css/estilos.css
@@ -9,32 +9,31 @@ and open the template in the editor.
 */
 
 .top .ui-layout-unit-content{
-   background: #EEE9D7;
+   background: #103B80;
 }
 
 .top{
-    background-color: #EEE9D7;
+    background-color: #103B80;
     border: none;
     border-radius: 0px;
 }
 
 .topPg{
     width: 100%;
-    height: 100px;
     border: none;
 }
 
 .topOl{
     border: none;
-    color: #424242;
+    color: #E6ECF9;
 }
 
 .botton .ui-layout-unit-content{
-   background: #424242;
+   background: #102554;
 }
 
 .botton{
-    background-color: #424242;
+    background-color: #102554;
     border: none;
     border-radius: 0px;
 }
